2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘waitpid’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘waitpid’.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘getcwd’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘getcwd’.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘mkstemp’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘mkstemp’.

2010-10-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document env vars that specify dir for temp files.

	* doc/rcs.texi (Environment): Use @defvr;
	document env vars ‘TMPDIR’, ‘TMP’, ‘TEMP’.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Look for and use <siginfo.h>.

	Regression introduced 2010-04-03, "Ignore <siginfo.h>".
	* configure.ac (AC_CHECK_HEADERS_ONCE): Add siginfo.h.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Take empty ‘ac_cv_prog_cc_c99’ as "C99-capable".

	* configure.ac (ac_cv_prog_cc_c99):
	If empty, skip ‘RCS_MUSTHAVE’ check.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Look for and use <ucontext.h>.

	Regression introduced 2010-04-03, "Ignore unused <ucontext.h>".
	* configure.ac (AC_CHECK_HEADERS_ONCE): Add ucontext.h.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘findprog’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘findprog’.

2010-10-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Get fdl.texi from gnulib.

	* autogen.sh (doc/fdl.texi): New ‘actually’.
	* doc/fdl.texi: Delete file.

2010-10-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Make configure script test program more portable.

	* configure.ac (BAD_CREAT0): Remove superfluous
	parentheses for ‘defined foo’ cpp conditional construct.

2010-10-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Ensure latest INSTALL, build-aux/* files.

	* autogen.sh: No longer support "autoreconf --force".
	(actually): New shell func; use it to override INSTALL,